# lozianim

./: .gitignore  CMakeLists.txt  README.md  lozi.html  lozi.txt
lozianim/: CMakeLists.txt  coefanim.cpp  coefanim.h  inputparser.h  lozianim.cpp  lozianim.h  lozidraw.cpp  lozidraw.h  pngwrite.cpp  pngwrite.h
